@@ -2,9 +2,4 @@ FROM rakudo-star
 
 WORKDIR /srv
 
-COPY . .
-
-RUN echo "===> Installing: Bailador dependencies" && \
-    zef --depsonly install .
-
 CMD ["/bin/bash"]
